--- a/app/src/main/res/layout/radomized.xml
+++ b/app/src/main/res/layout/radomized.xml
@@ -61,14 +61,12 @@
         android:layout_marginTop="8dp"
         android:text="@string/iii_a"
         android:textSize="20sp"
-        android:fontFamily="sans-serif"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.051"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.289"
-        tools:targetApi="jelly_bean" />
+        app:layout_constraintVertical_bias="0.289" />
 
     <Button
         android:id="@+id/again"
