--- a/app/src/main/res/layout/preference2.xml
+++ b/app/src/main/res/layout/preference2.xml
@@ -209,7 +209,7 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
-            android:text="@string/close"
+            android:text="@string/save_and_close"
             android:textAlignment="center"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.502"
