Add funny error messages.

--- a/app/src/main/res/layout-v16/radomized.xml
+++ b/app/src/main/res/layout-v16/radomized.xml
@@ -18,7 +18,6 @@
         android:layout_marginTop="8dp"
         android:fontFamily="monospace"
         android:text="Extras:"
-        android:textAlignment="textStart"
         android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -40,7 +39,6 @@
         android:layout_marginTop="8dp"
         android:fontFamily="monospace"
         android:text="Use Boards:"
-        android:textAlignment="textStart"
         android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -61,7 +59,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:fontFamily="monospace"
-        android:text="@string/textview"
+        android:text="@string/textView"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
