--- a/app/src/main/res/layout/help.xml
+++ b/app/src/main/res/layout/help.xml
@@ -61,7 +61,7 @@
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="@string/textview3"
+            android:text="@string/textView3"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
