--- a/app/src/main/res/layout/radomized.xml
+++ b/app/src/main/res/layout/radomized.xml
@@ -38,7 +38,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="@string/textview"
+        android:text="@string/textView"
         android:textSize="14sp"
         android:fontFamily="sans-serif"
         app:layout_constraintBottom_toBottomOf="parent"
